--- a/archives/toutiao-search/2024-04-13.md
+++ b/archives/toutiao-search/2024-04-13.md
@@ -1,49 +1,69 @@
 # 2024-04-13
 
-共 216 条
+共 232 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 13 2024 15:00:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 13 2024 17:00:51 GMT+0800 (China Standard Time) -->
 1. [河南原则上不再保留省直科级事业单位](https://so.toutiao.com/search?keyword=河南原则上不再保留省直科级事业单位)
-1. [男子确诊狂犬病身亡：几年前被狗咬过](https://so.toutiao.com/search?keyword=男子确诊狂犬病身亡：几年前被狗咬过)
+1. [美媒称伊朗准备了多达100枚导弹](https://so.toutiao.com/search?keyword=美媒称伊朗准备了多达100枚导弹)
 1. [炮制“秦朗丢作业”丢掉了什么](https://so.toutiao.com/search?keyword=炮制“秦朗丢作业”丢掉了什么)
+1. [男子确诊狂犬病身亡：几年前被狗咬过](https://so.toutiao.com/search?keyword=男子确诊狂犬病身亡：几年前被狗咬过)
 1. [伊朗向美国传话：勿插手伊以冲突](https://so.toutiao.com/search?keyword=伊朗向美国传话：勿插手伊以冲突)
-1. [金价或将被推升至3000美元](https://so.toutiao.com/search?keyword=金价或将被推升至3000美元)
+1. [西安狂风暴雨雷声滚滚](https://so.toutiao.com/search?keyword=西安狂风暴雨雷声滚滚)
 1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
 1. [至少50枚火箭弹从黎巴嫩射向以色列](https://so.toutiao.com/search?keyword=至少50枚火箭弹从黎巴嫩射向以色列)
-1. [捡废品老人将饭店整箱30斤生蚝搬走](https://so.toutiao.com/search?keyword=捡废品老人将饭店整箱30斤生蚝搬走)
-1. [保时捷女司机撞车后砸门吓哭小孩](https://so.toutiao.com/search?keyword=保时捷女司机撞车后砸门吓哭小孩)
+1. [首饰金价一夜下降10元每克](https://so.toutiao.com/search?keyword=首饰金价一夜下降10元每克)
+1. [83岁“义丐”离世 20年收养8个弃婴](https://so.toutiao.com/search?keyword=83岁“义丐”离世+20年收养8个弃婴)
 1. [伊朗与以色列互放狠话](https://so.toutiao.com/search?keyword=伊朗与以色列互放狠话)
-1. [金价狂飙下的众生相](https://so.toutiao.com/search?keyword=金价狂飙下的众生相)
 1. [官方辟谣河南息县5岁小孩被偷](https://so.toutiao.com/search?keyword=官方辟谣河南息县5岁小孩被偷)
-1. [伊朗要开始报复袭击以色列了吗](https://so.toutiao.com/search?keyword=伊朗要开始报复袭击以色列了吗)
-1. [梁家辉在李雪健面前好乖巧](https://so.toutiao.com/search?keyword=梁家辉在李雪健面前好乖巧)
-1. [浙江一位35岁姑娘相亲5次皆失败](https://so.toutiao.com/search?keyword=浙江一位35岁姑娘相亲5次皆失败)
-1. [中俄印等提醒非必要不前往以色列伊朗](https://so.toutiao.com/search?keyword=中俄印等提醒非必要不前往以色列伊朗)
-1. [大爷晨练发现坟里睡了个人 竟是逃犯](https://so.toutiao.com/search?keyword=大爷晨练发现坟里睡了个人+竟是逃犯)
-1. [男子电梯殴打女友被保安暴揍](https://so.toutiao.com/search?keyword=男子电梯殴打女友被保安暴揍)
-1. [美媒称伊朗准备了多达100枚导弹](https://so.toutiao.com/search?keyword=美媒称伊朗准备了多达100枚导弹)
-1. [端午放假3天不调休](https://so.toutiao.com/search?keyword=端午放假3天不调休)
-1. [网红杨立新遇害前曾承认婚内出轨怀孕](https://so.toutiao.com/search?keyword=网红杨立新遇害前曾承认婚内出轨怀孕)
-1. [网红猫一杯一夜掉粉近30万](https://so.toutiao.com/search?keyword=网红猫一杯一夜掉粉近30万)
-1. [菲方称要避免南海局势升温？中方回应](https://so.toutiao.com/search?keyword=菲方称要避免南海局势升温？中方回应)
-1. [杨立新男友曾在直播时称恨死她了](https://so.toutiao.com/search?keyword=杨立新男友曾在直播时称恨死她了)
-1. [央视评5岁女孩和英歌队互动](https://so.toutiao.com/search?keyword=央视评5岁女孩和英歌队互动)
-1. [专家揭秘黄金飙涨奥秘](https://so.toutiao.com/search?keyword=专家揭秘黄金飙涨奥秘)
-1. [老人上树采香椿被困 民警吊威亚救人](https://so.toutiao.com/search?keyword=老人上树采香椿被困+民警吊威亚救人)
 1. [呼和浩特一医院40名护士无故被辞退](https://so.toutiao.com/search?keyword=呼和浩特一医院40名护士无故被辞退)
-1. [美“叛国大使”被判15年监禁](https://so.toutiao.com/search?keyword=美“叛国大使”被判15年监禁)
+1. [伊朗要开始报复袭击以色列了吗](https://so.toutiao.com/search?keyword=伊朗要开始报复袭击以色列了吗)
+1. [金价狂飙下的众生相](https://so.toutiao.com/search?keyword=金价狂飙下的众生相)
+1. [赖清德安全团队为何延用蔡英文人马](https://so.toutiao.com/search?keyword=赖清德安全团队为何延用蔡英文人马)
+1. [央视评5岁女孩和英歌队互动](https://so.toutiao.com/search?keyword=央视评5岁女孩和英歌队互动)
+1. [为何说把菲“坐滩”军舰拖走不靠谱](https://so.toutiao.com/search?keyword=为何说把菲“坐滩”军舰拖走不靠谱)
+1. [专家揭秘黄金飙涨奥秘](https://so.toutiao.com/search?keyword=专家揭秘黄金飙涨奥秘)
+1. [捡废品老人将饭店整箱30斤生蚝搬走](https://so.toutiao.com/search?keyword=捡废品老人将饭店整箱30斤生蚝搬走)
+1. [网红猫一杯一夜掉粉近30万](https://so.toutiao.com/search?keyword=网红猫一杯一夜掉粉近30万)
+1. [网红杨立新遇害前曾承认婚内出轨怀孕](https://so.toutiao.com/search?keyword=网红杨立新遇害前曾承认婚内出轨怀孕)
+1. [小伙刚上班就被叉车砸倒身亡](https://so.toutiao.com/search?keyword=小伙刚上班就被叉车砸倒身亡)
+1. [比特币一夜暴跌 超29万人爆仓](https://so.toutiao.com/search?keyword=比特币一夜暴跌+超29万人爆仓)
+1. [杨立新男友曾在直播时称恨死她了](https://so.toutiao.com/search?keyword=杨立新男友曾在直播时称恨死她了)
+1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
+1. [男子扔共享单车砸坏多辆小车被抓](https://so.toutiao.com/search?keyword=男子扔共享单车砸坏多辆小车被抓)
+1. [中俄印等提醒非必要不前往以色列伊朗](https://so.toutiao.com/search?keyword=中俄印等提醒非必要不前往以色列伊朗)
+1. [保时捷女司机撞车后砸门吓哭小孩](https://so.toutiao.com/search?keyword=保时捷女司机撞车后砸门吓哭小孩)
+1. [王树国曾建议要活得更开放更大度](https://so.toutiao.com/search?keyword=王树国曾建议要活得更开放更大度)
+1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
+1. [端午放假3天不调休](https://so.toutiao.com/search?keyword=端午放假3天不调休)
+1. [安徽小伙开着挖掘机去西藏](https://so.toutiao.com/search?keyword=安徽小伙开着挖掘机去西藏)
+1. [拜登称美国将帮以色列防御伊朗](https://so.toutiao.com/search?keyword=拜登称美国将帮以色列防御伊朗)
 1. [小米汽车：SU7不建议贴隔热膜](https://so.toutiao.com/search?keyword=小米汽车：SU7不建议贴隔热膜)
 1. [网红猫一杯就编造捡作业事件道歉](https://so.toutiao.com/search?keyword=网红猫一杯就编造捡作业事件道歉)
-1. [比特币一夜暴跌 超29万人爆仓](https://so.toutiao.com/search?keyword=比特币一夜暴跌+超29万人爆仓)
-1. [安徽小伙开着挖掘机去西藏](https://so.toutiao.com/search?keyword=安徽小伙开着挖掘机去西藏)
+1. [洪秀柱：统一是必然的 希望在青年](https://so.toutiao.com/search?keyword=洪秀柱：统一是必然的+希望在青年)
+1. [奔驰挡路被提醒后车里人殴打路人](https://so.toutiao.com/search?keyword=奔驰挡路被提醒后车里人殴打路人)
+1. [科尔：若能升至第7或第8将有两条命](https://so.toutiao.com/search?keyword=科尔：若能升至第7或第8将有两条命)
+1. [梁家辉在李雪健面前好乖巧](https://so.toutiao.com/search?keyword=梁家辉在李雪健面前好乖巧)
+1. [黄子佼所持未成年影像涉及残忍虐行](https://so.toutiao.com/search?keyword=黄子佼所持未成年影像涉及残忍虐行)
+1. [台名嘴：赖清德不想改善两岸关系](https://so.toutiao.com/search?keyword=台名嘴：赖清德不想改善两岸关系)
+1. [乌克兰民众对军队动员法案态度不一](https://so.toutiao.com/search?keyword=乌克兰民众对军队动员法案态度不一)
+1. [大爷晨练发现坟里睡了个人 竟是逃犯](https://so.toutiao.com/search?keyword=大爷晨练发现坟里睡了个人+竟是逃犯)
+1. [金价或将被推升至3000美元](https://so.toutiao.com/search?keyword=金价或将被推升至3000美元)
+1. [学生修坏学校卫生间隔板被索赔](https://so.toutiao.com/search?keyword=学生修坏学校卫生间隔板被索赔)
+1. [保安揍服打人男子算防卫过当吗](https://so.toutiao.com/search?keyword=保安揍服打人男子算防卫过当吗)
+1. [韩媒批岸田在美演讲不提侵略历史](https://so.toutiao.com/search?keyword=韩媒批岸田在美演讲不提侵略历史)
+1. [浙江一位35岁姑娘相亲5次皆失败](https://so.toutiao.com/search?keyword=浙江一位35岁姑娘相亲5次皆失败)
+1. [网红杨立新遇害前刚收嫌疑人为徒](https://so.toutiao.com/search?keyword=网红杨立新遇害前刚收嫌疑人为徒)
+1. [男子电梯殴打女友被保安暴揍](https://so.toutiao.com/search?keyword=男子电梯殴打女友被保安暴揍)
+1. [菲方称要避免南海局势升温？中方回应](https://so.toutiao.com/search?keyword=菲方称要避免南海局势升温？中方回应)
+1. [老人上树采香椿被困 民警吊威亚救人](https://so.toutiao.com/search?keyword=老人上树采香椿被困+民警吊威亚救人)
+1. [美“叛国大使”被判15年监禁](https://so.toutiao.com/search?keyword=美“叛国大使”被判15年监禁)
 1. [泽连斯基：乌需7000亿美元重建资金](https://so.toutiao.com/search?keyword=泽连斯基：乌需7000亿美元重建资金)
 1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
 1. [越南女首富900亿诈骗案细节披露](https://so.toutiao.com/search?keyword=越南女首富900亿诈骗案细节披露)
 1. [五一之后今年还有2次调休长假](https://so.toutiao.com/search?keyword=五一之后今年还有2次调休长假)
 1. [知名大牌暇步士卖出白菜价](https://so.toutiao.com/search?keyword=知名大牌暇步士卖出白菜价)
 1. [中国乒协优化女队奥运选拔办法](https://so.toutiao.com/search?keyword=中国乒协优化女队奥运选拔办法)
-1. [学生修坏学校卫生间隔板被索赔](https://so.toutiao.com/search?keyword=学生修坏学校卫生间隔板被索赔)
 1. [杨立新好友：遇害前她还在吃堕胎药](https://so.toutiao.com/search?keyword=杨立新好友：遇害前她还在吃堕胎药)
 1. [杜特尔特：若中菲紧张定是美国挑唆](https://so.toutiao.com/search?keyword=杜特尔特：若中菲紧张定是美国挑唆)
 1. [俄称西方应为乌无条件投降做准备](https://so.toutiao.com/search?keyword=俄称西方应为乌无条件投降做准备)
@@ -51,7 +71,6 @@
 1. [蔡正元：台军别想靠海峡挡住解放军](https://so.toutiao.com/search?keyword=蔡正元：台军别想靠海峡挡住解放军)
 1. [俄打击乌能源设施 乌打击俄军阵地](https://so.toutiao.com/search?keyword=俄打击乌能源设施+乌打击俄军阵地)
 1. [郭敬明上海开妆造店 均消1500元](https://so.toutiao.com/search?keyword=郭敬明上海开妆造店+均消1500元)
-1. [拜登称美国将帮以色列防御伊朗](https://so.toutiao.com/search?keyword=拜登称美国将帮以色列防御伊朗)
 1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
 1. [詹姆斯比赛中上演突破重扣](https://so.toutiao.com/search?keyword=詹姆斯比赛中上演突破重扣)
 1. [各地春耕有妙招](https://so.toutiao.com/search?keyword=各地春耕有妙招)
@@ -72,7 +91,6 @@
 1. [李海新将主哨中超京沪大战](https://so.toutiao.com/search?keyword=李海新将主哨中超京沪大战)
 1. [妻子连续3年逼脑梗丈夫走路锻炼](https://so.toutiao.com/search?keyword=妻子连续3年逼脑梗丈夫走路锻炼)
 1. [中央音乐学院系主任被同校教授举报](https://so.toutiao.com/search?keyword=中央音乐学院系主任被同校教授举报)
-1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
 1. [浙江一男子确诊狂犬病身亡](https://so.toutiao.com/search?keyword=浙江一男子确诊狂犬病身亡)
 1. [中央气象台继续发布暴雨蓝色预警](https://so.toutiao.com/search?keyword=中央气象台继续发布暴雨蓝色预警)
 1. [曝部分阿拉伯国家拒让美过境袭伊朗](https://so.toutiao.com/search?keyword=曝部分阿拉伯国家拒让美过境袭伊朗)
@@ -93,7 +111,6 @@
 1. [白营民代：表决大战最大赢家韩国瑜](https://so.toutiao.com/search?keyword=白营民代：表决大战最大赢家韩国瑜)
 1. [美以军方就伊朗可能的袭击进行评估](https://so.toutiao.com/search?keyword=美以军方就伊朗可能的袭击进行评估)
 1. [过去1个月近10万人逃离海地太子港](https://so.toutiao.com/search?keyword=过去1个月近10万人逃离海地太子港)
-1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
 1. [农村大叔用两把刷子自制扫地机](https://so.toutiao.com/search?keyword=农村大叔用两把刷子自制扫地机)
 1. [伊朗媒体：要把以色列特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把以色列特拉维夫夷为平地)
 1. [潘石屹：做事情要提前预判](https://so.toutiao.com/search?keyword=潘石屹：做事情要提前预判)
@@ -187,7 +204,6 @@
 1. [陈锡明任中国航天科工集团董事长](https://so.toutiao.com/search?keyword=陈锡明任中国航天科工集团董事长)
 1. [专家：中美经济脱钩后果是负面的](https://so.toutiao.com/search?keyword=专家：中美经济脱钩后果是负面的)
 1. [92号油价或将超8.3元/升](https://so.toutiao.com/search?keyword=92号油价或将超8.3元/升)
-1. [黄子佼所持未成年影像涉及残忍虐行](https://so.toutiao.com/search?keyword=黄子佼所持未成年影像涉及残忍虐行)
 1. [台湾多地官方封杀黄子佼](https://so.toutiao.com/search?keyword=台湾多地官方封杀黄子佼)
 1. [伊朗是否会报复？伊美互相喊话](https://so.toutiao.com/search?keyword=伊朗是否会报复？伊美互相喊话)
 1. [华为P70系列详细参数和价格曝光](https://so.toutiao.com/search?keyword=华为P70系列详细参数和价格曝光)
