--- a/archives/toutiao-search/2024-04-13.md
+++ b/archives/toutiao-search/2024-04-13.md
@@ -1,59 +1,69 @@
 # 2024-04-13
 
-共 246 条
+共 252 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 13 2024 18:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 13 2024 19:00:54 GMT+0800 (China Standard Time) -->
+1. [杨立新干弟弟：出轨视频是为了施压](https://so.toutiao.com/search?keyword=杨立新干弟弟：出轨视频是为了施压)
 1. [赵乐际会见金正恩](https://so.toutiao.com/search?keyword=赵乐际会见金正恩)
-1. [美媒称伊朗准备了多达100枚导弹](https://so.toutiao.com/search?keyword=美媒称伊朗准备了多达100枚导弹)
 1. [炮制“秦朗丢作业”丢掉了什么](https://so.toutiao.com/search?keyword=炮制“秦朗丢作业”丢掉了什么)
-1. [西安狂风暴雨雷声滚滚](https://so.toutiao.com/search?keyword=西安狂风暴雨雷声滚滚)
+1. [美媒称伊朗准备了多达100枚导弹](https://so.toutiao.com/search?keyword=美媒称伊朗准备了多达100枚导弹)
 1. [河南原则上不再保留省直科级事业单位](https://so.toutiao.com/search?keyword=河南原则上不再保留省直科级事业单位)
-1. [南昌暴雨](https://so.toutiao.com/search?keyword=南昌暴雨)
-1. [伊朗向美国传话：勿插手伊以冲突](https://so.toutiao.com/search?keyword=伊朗向美国传话：勿插手伊以冲突)
-1. [保时捷女司机撞车后砸门吓哭小孩](https://so.toutiao.com/search?keyword=保时捷女司机撞车后砸门吓哭小孩)
-1. [王树国曾建议要活得更开放更大度](https://so.toutiao.com/search?keyword=王树国曾建议要活得更开放更大度)
-1. [伊朗与以色列互放狠话](https://so.toutiao.com/search?keyword=伊朗与以色列互放狠话)
+1. [至少50枚火箭弹从黎巴嫩射向以色列](https://so.toutiao.com/search?keyword=至少50枚火箭弹从黎巴嫩射向以色列)
+1. [西安狂风暴雨雷声滚滚](https://so.toutiao.com/search?keyword=西安狂风暴雨雷声滚滚)
 1. [多名重庆网友晒燃气费账单](https://so.toutiao.com/search?keyword=多名重庆网友晒燃气费账单)
+1. [德舆论：朔尔茨此次访华不同寻常](https://so.toutiao.com/search?keyword=德舆论：朔尔茨此次访华不同寻常)
+1. [伊朗与以色列互放狠话](https://so.toutiao.com/search?keyword=伊朗与以色列互放狠话)
+1. [男子确诊狂犬病身亡：几年前被狗咬过](https://so.toutiao.com/search?keyword=男子确诊狂犬病身亡：几年前被狗咬过)
 1. [官方辟谣河南息县5岁小孩被偷](https://so.toutiao.com/search?keyword=官方辟谣河南息县5岁小孩被偷)
 1. [伊朗要开始报复袭击以色列了吗](https://so.toutiao.com/search?keyword=伊朗要开始报复袭击以色列了吗)
-1. [男子确诊狂犬病身亡：几年前被狗咬过](https://so.toutiao.com/search?keyword=男子确诊狂犬病身亡：几年前被狗咬过)
-1. [83岁“义丐”离世 20年收养8个弃婴](https://so.toutiao.com/search?keyword=83岁“义丐”离世+20年收养8个弃婴)
-1. [至少50枚火箭弹从黎巴嫩射向以色列](https://so.toutiao.com/search?keyword=至少50枚火箭弹从黎巴嫩射向以色列)
 1. [网红杨立新遇害前刚收嫌疑人为徒](https://so.toutiao.com/search?keyword=网红杨立新遇害前刚收嫌疑人为徒)
-1. [美国黑人被警方按压身亡画面曝光](https://so.toutiao.com/search?keyword=美国黑人被警方按压身亡画面曝光)
-1. [专家揭秘黄金飙涨奥秘](https://so.toutiao.com/search?keyword=专家揭秘黄金飙涨奥秘)
-1. [货车在国道边停车被村民索要2元](https://so.toutiao.com/search?keyword=货车在国道边停车被村民索要2元)
+1. [保时捷女司机撞车后砸门吓哭小孩](https://so.toutiao.com/search?keyword=保时捷女司机撞车后砸门吓哭小孩)
+1. [首饰金价一夜下降10元每克](https://so.toutiao.com/search?keyword=首饰金价一夜下降10元每克)
+1. [为何说把菲“坐滩”军舰拖走不靠谱](https://so.toutiao.com/search?keyword=为何说把菲“坐滩”军舰拖走不靠谱)
+1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
+1. [呼和浩特一医院40名护士无故被辞退](https://so.toutiao.com/search?keyword=呼和浩特一医院40名护士无故被辞退)
+1. [王树国曾建议要活得更开放更大度](https://so.toutiao.com/search?keyword=王树国曾建议要活得更开放更大度)
 1. [网红杨立新遇害前曾承认婚内出轨怀孕](https://so.toutiao.com/search?keyword=网红杨立新遇害前曾承认婚内出轨怀孕)
 1. [网红猫一杯一夜掉粉近30万](https://so.toutiao.com/search?keyword=网红猫一杯一夜掉粉近30万)
-1. [首饰金价一夜下降10元每克](https://so.toutiao.com/search?keyword=首饰金价一夜下降10元每克)
-1. [被判死刑的越南女首富发迹史](https://so.toutiao.com/search?keyword=被判死刑的越南女首富发迹史)
-1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
-1. [金价狂飙下的众生相](https://so.toutiao.com/search?keyword=金价狂飙下的众生相)
-1. [呼和浩特一医院40名护士无故被辞退](https://so.toutiao.com/search?keyword=呼和浩特一医院40名护士无故被辞退)
-1. [为何说把菲“坐滩”军舰拖走不靠谱](https://so.toutiao.com/search?keyword=为何说把菲“坐滩”军舰拖走不靠谱)
-1. [捡废品老人将饭店整箱30斤生蚝搬走](https://so.toutiao.com/search?keyword=捡废品老人将饭店整箱30斤生蚝搬走)
+1. [伊朗向美国传话：勿插手伊以冲突](https://so.toutiao.com/search?keyword=伊朗向美国传话：勿插手伊以冲突)
+1. [开封王婆要去江西说媒了](https://so.toutiao.com/search?keyword=开封王婆要去江西说媒了)
+1. [专家揭秘黄金飙涨奥秘](https://so.toutiao.com/search?keyword=专家揭秘黄金飙涨奥秘)
+1. [妻子连续3年逼脑梗丈夫走路锻炼](https://so.toutiao.com/search?keyword=妻子连续3年逼脑梗丈夫走路锻炼)
 1. [杨立新男友曾在直播时称恨死她了](https://so.toutiao.com/search?keyword=杨立新男友曾在直播时称恨死她了)
+1. [金价狂飙下的众生相](https://so.toutiao.com/search?keyword=金价狂飙下的众生相)
+1. [iCAR V23正式发布](https://so.toutiao.com/search?keyword=iCAR+V23正式发布)
 1. [网红猫一杯就编造捡作业事件道歉](https://so.toutiao.com/search?keyword=网红猫一杯就编造捡作业事件道歉)
+1. [保安揍服打人男子算防卫过当吗](https://so.toutiao.com/search?keyword=保安揍服打人男子算防卫过当吗)
+1. [捡废品老人将饭店整箱30斤生蚝搬走](https://so.toutiao.com/search?keyword=捡废品老人将饭店整箱30斤生蚝搬走)
+1. [南昌暴雨](https://so.toutiao.com/search?keyword=南昌暴雨)
+1. [端午放假3天不调休](https://so.toutiao.com/search?keyword=端午放假3天不调休)
+1. [女律师替农民工讨薪被捕案3大疑点](https://so.toutiao.com/search?keyword=女律师替农民工讨薪被捕案3大疑点)
+1. [小米汽车：SU7不建议贴隔热膜](https://so.toutiao.com/search?keyword=小米汽车：SU7不建议贴隔热膜)
+1. [货车在国道边停车被村民索要2元](https://so.toutiao.com/search?keyword=货车在国道边停车被村民索要2元)
+1. [名嘴批民进党：台湾人也想去看长城](https://so.toutiao.com/search?keyword=名嘴批民进党：台湾人也想去看长城)
+1. [俄公布“绝密导弹”试射画面](https://so.toutiao.com/search?keyword=俄公布“绝密导弹”试射画面)
+1. [泽连斯基：乌需7000亿美元重建资金](https://so.toutiao.com/search?keyword=泽连斯基：乌需7000亿美元重建资金)
 1. [小伙刚上班就被叉车砸倒身亡](https://so.toutiao.com/search?keyword=小伙刚上班就被叉车砸倒身亡)
-1. [德舆论：朔尔茨此次访华不同寻常](https://so.toutiao.com/search?keyword=德舆论：朔尔茨此次访华不同寻常)
+1. [河南1-1南通开赛至今4平2负](https://so.toutiao.com/search?keyword=河南1-1南通开赛至今4平2负)
+1. [拜登称美国将帮以色列防御伊朗](https://so.toutiao.com/search?keyword=拜登称美国将帮以色列防御伊朗)
+1. [央视评5岁女孩和英歌队互动](https://so.toutiao.com/search?keyword=央视评5岁女孩和英歌队互动)
+1. [83岁“义丐”离世 20年收养8个弃婴](https://so.toutiao.com/search?keyword=83岁“义丐”离世+20年收养8个弃婴)
 1. [比特币一夜暴跌 超29万人爆仓](https://so.toutiao.com/search?keyword=比特币一夜暴跌+超29万人爆仓)
+1. [澳大利亚发生持刀行凶事件 已致6死](https://so.toutiao.com/search?keyword=澳大利亚发生持刀行凶事件+已致6死)
+1. [中使馆敦促美日菲停止操弄集团政治](https://so.toutiao.com/search?keyword=中使馆敦促美日菲停止操弄集团政治)
+1. [中方的制裁能打疼美军火公司吗](https://so.toutiao.com/search?keyword=中方的制裁能打疼美军火公司吗)
+1. [江西师大虐猫学生已被开除学籍](https://so.toutiao.com/search?keyword=江西师大虐猫学生已被开除学籍)
+1. [美国黑人被警方按压身亡画面曝光](https://so.toutiao.com/search?keyword=美国黑人被警方按压身亡画面曝光)
+1. [被判死刑的越南女首富发迹史](https://so.toutiao.com/search?keyword=被判死刑的越南女首富发迹史)
 1. [洪秀柱：两岸同胞都是炎黄子孙](https://so.toutiao.com/search?keyword=洪秀柱：两岸同胞都是炎黄子孙)
 1. [中央汇金增持三大国有银行](https://so.toutiao.com/search?keyword=中央汇金增持三大国有银行)
-1. [端午放假3天不调休](https://so.toutiao.com/search?keyword=端午放假3天不调休)
-1. [小米汽车：SU7不建议贴隔热膜](https://so.toutiao.com/search?keyword=小米汽车：SU7不建议贴隔热膜)
-1. [央视评5岁女孩和英歌队互动](https://so.toutiao.com/search?keyword=央视评5岁女孩和英歌队互动)
 1. [美日菲加速军事勾连 中方如何应对](https://so.toutiao.com/search?keyword=美日菲加速军事勾连+中方如何应对)
-1. [女律师替农民工讨薪被捕案3大疑点](https://so.toutiao.com/search?keyword=女律师替农民工讨薪被捕案3大疑点)
-1. [拜登称美国将帮以色列防御伊朗](https://so.toutiao.com/search?keyword=拜登称美国将帮以色列防御伊朗)
-1. [澳大利亚发生持刀行凶事件 已致6死](https://so.toutiao.com/search?keyword=澳大利亚发生持刀行凶事件+已致6死)
 1. [耶路撒冷：民众呼吁立即停火](https://so.toutiao.com/search?keyword=耶路撒冷：民众呼吁立即停火)
 1. [男子扔共享单车砸坏多辆小车被抓](https://so.toutiao.com/search?keyword=男子扔共享单车砸坏多辆小车被抓)
-1. [俄公布“绝密导弹”试射画面](https://so.toutiao.com/search?keyword=俄公布“绝密导弹”试射画面)
 1. [洪秀柱：统一是必然的 希望在青年](https://so.toutiao.com/search?keyword=洪秀柱：统一是必然的+希望在青年)
 1. [德国汉莎航空继续停飞往返伊朗航班](https://so.toutiao.com/search?keyword=德国汉莎航空继续停飞往返伊朗航班)
 1. [《承欢记》里的上海虹口风景](https://so.toutiao.com/search?keyword=《承欢记》里的上海虹口风景)
-1. [开封王婆要去江西说媒了](https://so.toutiao.com/search?keyword=开封王婆要去江西说媒了)
 1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
 1. [赖清德安全团队为何延用蔡英文人马](https://so.toutiao.com/search?keyword=赖清德安全团队为何延用蔡英文人马)
 1. [中俄印等提醒非必要不前往以色列伊朗](https://so.toutiao.com/search?keyword=中俄印等提醒非必要不前往以色列伊朗)
@@ -68,14 +78,12 @@
 1. [大爷晨练发现坟里睡了个人 竟是逃犯](https://so.toutiao.com/search?keyword=大爷晨练发现坟里睡了个人+竟是逃犯)
 1. [金价或将被推升至3000美元](https://so.toutiao.com/search?keyword=金价或将被推升至3000美元)
 1. [学生修坏学校卫生间隔板被索赔](https://so.toutiao.com/search?keyword=学生修坏学校卫生间隔板被索赔)
-1. [保安揍服打人男子算防卫过当吗](https://so.toutiao.com/search?keyword=保安揍服打人男子算防卫过当吗)
 1. [韩媒批岸田在美演讲不提侵略历史](https://so.toutiao.com/search?keyword=韩媒批岸田在美演讲不提侵略历史)
 1. [浙江一位35岁姑娘相亲5次皆失败](https://so.toutiao.com/search?keyword=浙江一位35岁姑娘相亲5次皆失败)
 1. [男子电梯殴打女友被保安暴揍](https://so.toutiao.com/search?keyword=男子电梯殴打女友被保安暴揍)
 1. [菲方称要避免南海局势升温？中方回应](https://so.toutiao.com/search?keyword=菲方称要避免南海局势升温？中方回应)
 1. [老人上树采香椿被困 民警吊威亚救人](https://so.toutiao.com/search?keyword=老人上树采香椿被困+民警吊威亚救人)
 1. [美“叛国大使”被判15年监禁](https://so.toutiao.com/search?keyword=美“叛国大使”被判15年监禁)
-1. [泽连斯基：乌需7000亿美元重建资金](https://so.toutiao.com/search?keyword=泽连斯基：乌需7000亿美元重建资金)
 1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
 1. [越南女首富900亿诈骗案细节披露](https://so.toutiao.com/search?keyword=越南女首富900亿诈骗案细节披露)
 1. [五一之后今年还有2次调休长假](https://so.toutiao.com/search?keyword=五一之后今年还有2次调休长假)
@@ -104,7 +112,6 @@
 1. [英国愿支持俄罗斯运动员参加奥运会](https://so.toutiao.com/search?keyword=英国愿支持俄罗斯运动员参加奥运会)
 1. [台湾嘉义一夜震8次 居民吓到不敢睡](https://so.toutiao.com/search?keyword=台湾嘉义一夜震8次+居民吓到不敢睡)
 1. [李海新将主哨中超京沪大战](https://so.toutiao.com/search?keyword=李海新将主哨中超京沪大战)
-1. [妻子连续3年逼脑梗丈夫走路锻炼](https://so.toutiao.com/search?keyword=妻子连续3年逼脑梗丈夫走路锻炼)
 1. [中央音乐学院系主任被同校教授举报](https://so.toutiao.com/search?keyword=中央音乐学院系主任被同校教授举报)
 1. [浙江一男子确诊狂犬病身亡](https://so.toutiao.com/search?keyword=浙江一男子确诊狂犬病身亡)
 1. [中央气象台继续发布暴雨蓝色预警](https://so.toutiao.com/search?keyword=中央气象台继续发布暴雨蓝色预警)
@@ -118,7 +125,6 @@
 1. [傅聪候任中国常驻联合国代表](https://so.toutiao.com/search?keyword=傅聪候任中国常驻联合国代表)
 1. [JK罗琳说不会原谅哈利波特主演](https://so.toutiao.com/search?keyword=JK罗琳说不会原谅哈利波特主演)
 1. [张伟丽笑称闫晓楠好凶啊](https://so.toutiao.com/search?keyword=张伟丽笑称闫晓楠好凶啊)
-1. [iCAR V23正式发布](https://so.toutiao.com/search?keyword=iCAR+V23正式发布)
 1. [河南原则上不再保留科级事业单位](https://so.toutiao.com/search?keyword=河南原则上不再保留科级事业单位)
 1. [菲律宾两大家族被指“因中国决裂”](https://so.toutiao.com/search?keyword=菲律宾两大家族被指“因中国决裂”)
 1. [中使馆驳斥澳方涉仁爱礁错误言论](https://so.toutiao.com/search?keyword=中使馆驳斥澳方涉仁爱礁错误言论)
